OnboardingV2Minimal/force-app/main/default/objects/POE_Dealer_Code__c/POE_Dealer_Code__c.object-meta.xml
<CustomObject>
    <description>Stores dealer codes for DTV FFL and NFFL sales</description>
    <label>Dealer Code</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Dealer Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>