OnboardingV2Minimal/force-app/main/default/objects/POE_Dealer_Code__c/fields/Frontier_PID__c.field-meta.xml
<CustomField>
    <fullName>Frontier_PID__c</fullName>
    <description>Frontier PID used by Onboarding Team in Events, Phone Sales and D2D [PER-4100]</description>
    <label>Frontier PID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>