OnboardingV2Minimal/force-app/main/default/objects/POE_Dealer_Code__c/fields/POE_Account__c.field-meta.xml
<CustomField>
    <fullName>POE_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealer Codes</relationshipLabel>
    <relationshipName>Dealer_Codes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>