OnboardingV2Minimal/force-app/main/default/objects/POE_Dealer_Code__c/fields/POE_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>POE_Account_Number__c</fullName>
    <label>Account Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>