OnboardingV2Minimal/force-app/main/default/objects/POE_Dealer_Code__c/fields/POE_Affiliate_Id__c.field-meta.xml
<CustomField>
    <fullName>POE_Affiliate_Id__c</fullName>
    <label>Spectrum Affiliate ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>