OnboardingV2Minimal/force-app/main/default/objects/POE_Dealer_Code__c/fields/POE_Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>POE_Dealer_Code__c</fullName>
    <description>Dealer Code assigned for the program</description>
    <externalId>true</externalId>
    <inlineHelpText>Dealer Codes – DIRECTV, Viasat, Frontier</inlineHelpText>
    <label>Dealer Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>