OnboardingV2Minimal/force-app/main/default/objects/POE_Dealer_Code__c/fields/POE_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>POE_Program_Type__c</fullName>
    <label>DIRECTV Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FFL</fullName>
            </value>
            <value>
                <fullName>NFFL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>