OnboardingV2Minimal/force-app/main/default/objects/POE_Dealer_Code__c/fields/Spectrum_Sales_Id__c.field-meta.xml
<CustomField>
    <fullName>Spectrum_Sales_Id__c</fullName>
    <description>Represents the Sales Id of a particular Affiliate Id [PER-4380]</description>
    <label>Spectrum Sales Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>