OnboardingV2Minimal/force-app/main/default/objects/POE_Dealer_Code__c/validationRules/Concurrent_Spectrum_and_Dealer_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Concurrent_Spectrum_and_Dealer_Code</fullName>
    <active>true</active>
    <description>I should only be able to input either “Spectrum Affiliate ID” or “DIRECTV Program Type”, not both. [PER-3687]</description>
    <errorConditionFormula>AND(NOT(ISBLANK( POE_Affiliate_Id__c)),(NOT(ISBLANK( POE_Dealer_Code__c ))))</errorConditionFormula>
    <errorMessage>Only a value for  “Spectrum Affiliate ID” or “DIRECTV Program Type” can be assigned, not both.</errorMessage>
</ValidationRule>