OnboardingV2Minimal/force-app/main/default/objects/POE_Dealer_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>POE_Account_Number__c</columns>
    <columns>POE_Program_Type__c</columns>
    <columns>POE_Dealer_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>